--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coba git</title>
-    <link rel="stylesheet" type="text/css/" href="style.css">
+    <style type="text/css">
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello World!</h1>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
