--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coba git</title>
-    <style type="text/css">
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello World!</h1>
